# youtube-music-uploader

./: .gitignore  README.org  flake.nix  pyproject.toml
ytm_uploader/: __init__.py  cli.py
